added PostgreSQL database connection configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ baymax.google-request-url=https://www.googleapis.com/oauth2/v4/token
 baymax.google-client-token=733427710928-nrs427urh5b6n47js1j5vlp50ctgfbnm.apps.googleusercontent.com
 baymax.google-client-secret=oyH_tyoCT6nRCC8Ets93NTq_
 baymax.google-grant-type=authorization_code
+
+
+#JDBC
+baymax.db-url=jdbc:postgresql://baymax.c46u1tmnuspe.us-east-1.rds.amazonaws.com:5432/baymax
+baymax.db-driver=org.postgresql.Driver
+baymax.db-username=dev
+baymax.db-password=placeholder
